--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -352,3 +352,15 @@
     margin: 5px 0 0 3px;
   }
 }
+
+.usa-sidenav-list {
+  a {
+    font-size: 15px;
+    text-decoration: underline;
+    padding: 8px 16px 8px 30px;
+
+    &.va-button-primary {
+      padding: 1rem 2rem;
+    }
+  }
+}
