--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -133,7 +133,7 @@
 
         &:hover {
           background-color: $light-blue;
-          padding: 8px 14px 8px 14px;
+          padding: 8px 14px 8px 12px;
           border-color: $color-link-default;
           transition:
             background-color .1s ease-in-out 0s,
@@ -296,7 +296,7 @@
     .usa-sidenav-list {
       a {
         font-size: 15px;
-        padding: 8px 14px 8px 14px;
+        padding: 8px 14px 8px 12px;
         text-decoration: none;
 
         // added to deal with accordian overflow
@@ -356,7 +356,7 @@
 .usa-sidenav-list {
   a {
     font-size: 15px;
-    text-decoration: underline;
+    // text-decoration: underline;
     padding: 8px 16px 8px 30px;
 
     &.va-button-primary {
