--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -361,7 +361,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
   a {
     font-size: 15px;
     text-decoration: none;
-    padding: 8px 16px 8px 30px;
+    padding: $level-2-default-padding;
 
     &.va-button-primary {
       padding: 1rem 2rem;
