--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -143,12 +143,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
         width: 100%;
         border-left: 4px solid transparent;
 
-        &:focus {
-          background-color: $mm-gray;
-          font-weight: bold;
-        }
-
-        &:hover {
+        &:hover, &:focus {
           background-color: $light-blue;
           padding: $level-2-hover-padding;
           border-color: $color-link-default;
