--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -240,7 +240,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
       font-weight: bold;
       margin-left: 0;
       &:hover, &:focus {
-        border-color: $color-link-default;
+        border-color: $color-base;
         padding: $level-2-default-padding;
       }
     }
