applied fontawesome 5 style upgrade to homepage buttons

--- a/src/sass/modules/_m-alert.scss
+++ b/src/sass/modules/_m-alert.scss
@@ -9,7 +9,7 @@
 
   &::before {
     background: none;
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 5 free";
     font-size: 2rem;
     margin-right: 1.5rem;
     position: static;
