--- a/src/components/header/vcl/vcl.njk
+++ b/src/components/header/vcl/vcl.njk
@@ -4,7 +4,7 @@
     <h3>Get help from Veterans Crisis Line</h3>
 
     <button class="va-modal-close va-overlay-close" type="button" aria-label="Close this modal" onClick="showModal(this);">
-      <i class="far fa-times-circle va-overlay-close"></i>
+      <i class="fas fa-times-circle va-overlay-close"></i>
     </button>
 
     <div class="va-overlay-body va-crisis-panel-body">
