imported mixins into src/core.scss

--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -12,6 +12,7 @@
 
 // Font Awesome WOFF/WOFF2 fonts only
 @import "~@fortawesome/fontawesome-free/scss/variables";
+@import "~@fortawesome/fontawesome-free/scss/mixins";
 @import "~@fortawesome/fontawesome-free/scss/core";
 @import "~@fortawesome/fontawesome-free/scss/icons";
 @import "~@fortawesome/fontawesome-free/scss/animated";
