--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -1,3 +1,7 @@
+$vetnav-panel-height-desktop: 490px;
+$vetnav-panel-height: 380px;
+$marketing-container-height: 380px;
+
 #mega-menu {
   flex: 1 0 100%;
   color: $color-primary;
@@ -114,7 +118,7 @@
 
     .vetnav-panel {
       box-shadow: 0 7px 25px -11px $color-black;
-      height: 460px;
+      height: $vetnav-panel-height-desktop;
       width: 1008px;
       left: 0;
 
@@ -206,7 +210,7 @@
 
   .mm-marketing-container {
     background-color: $color-white;
-    height: 350px;
+    height: $marketing-container-height;
     overflow: hidden;
 
     &.mm-marketing-gray {
@@ -258,7 +262,7 @@
   }
 
   .mm-marketing-container {
-    height: 350px;
+    height: $marketing-container-height;
 
     p {
       margin-top: 5px;
@@ -278,7 +282,7 @@
 
     .vetnav-panel {
       width: $medium-large-screen;
-      height: 380px;
+      height: $vetnav-panel-height;
     }
 
     .column-one {
@@ -322,7 +326,7 @@
   @include media($small-desktop-screen) {
     .vetnav-panel {
       width: $small-desktop-screen;
-      height: 460px;
+      height: $vetnav-panel-height-desktop;
     }
 
     .panel-bottom-link {
