Create flexbox grid

--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -140,3 +140,8 @@ $spacers: (
   8:    $multiple * 8,
   9:    $multiple * 9
 ) !default;
+
+//====================================
+// Grid columns
+//===================================
+$grid-columns: 12 !default;
