--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -72,6 +72,9 @@
 @import "base/va";
 @import "base/focus";
 
+// ----- Layout ---- //
+@import "layout/flex-grid";
+
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
 @import "utilities/display";
 @import "utilities/margins";
