Fix/make review button full width (#228)
* update version

* make button 100% width for smaller than medium screens

* updated media query

* update versions

--- a/packages/formation/sass/modules/_m-form-process.scss
+++ b/packages/formation/sass/modules/_m-form-process.scss
@@ -65,6 +65,14 @@
 
 // Overriding the accordion button styles that are too broad
 .form-review-panel {
+  @media (max-width: $medium-screen) {
+    .form-review-array {
+      .edit-btn {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
   button:not(.usa-button-unstyled) {
     background-image: none;
     background-color: $color-primary;
