Font Awesome - Adds Brand, Regular icon sets (#227)
* added class in core.scss to recognize brand icons

* added Font Awesome 5 brands font files

* Clean up code

* switch to fas

* Move fa override to full.scss

* More patches

* add another beta fa version

* Add -FA to veresion

* Move FA to peer dependency

* Account for large SVGs as part of FA

* increment alpha version

* move back to regular dependencies

* Move back to peerDependencies

* increment alpha

* rm svg from loader

* switch modal to far

* increment alpha

* increment version

* Revert "switch modal to far"

This reverts commit d7db82661bb73710783f2ef082cdedafa8089f7b.

* increment version

* Also have peers in dependencies

* rm duplicate font weight

--- a/packages/formation/sass/modules/_m-alert.scss
+++ b/packages/formation/sass/modules/_m-alert.scss
@@ -13,6 +13,7 @@
     font-size: 2rem;
     margin-right: 1.5rem;
     position: static;
+    font-weight: 900;
   }
 
   // &-body would not have had high enough precedence.
