--- a/packages/formation/sass/full.scss
+++ b/packages/formation/sass/full.scss
@@ -2,6 +2,7 @@
  * Complete set of Formation styles
  */
 
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
 @import "core";
