--- a/packages/gatsby-documentation/src/scss/main.scss
+++ b/packages/gatsby-documentation/src/scss/main.scss
@@ -34,6 +34,12 @@
     text-align: center;
     margin-bottom: 20px;
     margin-top: 10px;
+    padding-bottom: 11px;
+    border-bottom: 1px solid rgba(0,0,0,0.07);
+  }
+
+  h4 {
+    margin-left: 25px;
   }
 
   .menu-list {
@@ -59,5 +65,17 @@
     margin-top: 0;
     padding-bottom: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+  }
+
+  .component-props-table {
+    td {
+      padding-left: 10px;
+    }
+  }
+
+  .rendered-component {
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    padding: 10px;
   }
 }
