--- a/packages/gatsby-documentation/src/scss/main.scss
+++ b/packages/gatsby-documentation/src/scss/main.scss
@@ -67,8 +67,8 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.07);
   }
 
-  .component-props-table {
-    td {
+  td, th {
+    &:first-child {
       padding-left: 10px;
     }
   }
