--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -60,6 +60,7 @@
 
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
 @import "utilities/display";
+@import "utilities/flexbox";
 @import "utilities/margins";
 @import "utilities/padding";
 @import "utilities/visibility";
