--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -59,6 +59,7 @@
 @import "layout/flex-grid";
 
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
+@import "utilities/color";
 @import "utilities/display";
 @import "utilities/flexbox";
 @import "utilities/margins";
