Array field/feature 320 move add another button (#232)
* update version

* move another button to the right

* version packages

* revert version bump on formation-react

--- a/packages/formation/sass/modules/_m-form-process.scss
+++ b/packages/formation/sass/modules/_m-form-process.scss
@@ -102,6 +102,7 @@
   .edit-btn {
     background-color: $color-primary;
     color: $color-white;
+    margin-left: auto;
     &:hover {
       background-color: $color-primary-darker;
       color: $color-white;
