Array field/16659 enforce maxitems (#233)
* update version

* add disabled style for edit button

* increment version

* update selector for disabled styles

--- a/packages/formation/sass/modules/_m-form-process.scss
+++ b/packages/formation/sass/modules/_m-form-process.scss
@@ -113,6 +113,10 @@
       background-color: transparent;
       border: 2px solid $color-primary;
       color: $color-primary;
+      &:disabled {
+        color: $color-gray-lightest;
+        border-color: $color-gray-lightest;
+      }
       &:hover {
         background-color: transparent;
         border: 2px solid $color-primary-darker;
