--- a/packages/formation/sass/utilities/_color.scss
+++ b/packages/formation/sass/utilities/_color.scss
@@ -1,94 +1,94 @@
 .vads-u-color--base {
-  color: $color-base;
+  color: $color-base !important;
 }
 
 .vads-u-color--white {
-  color: $color-white;
+  color: $color-white !important;
 }
 
 .vads-u-color--black {
-  color: $color-black;
+  color: $color-black !important;
 }
 
 .vads-u-color--orange {
-  color: $color-orange;
+  color: $color-orange !important;
 }
 
 .vads-u-color--link-default {
-  color: $color-link-default;
+  color: $color-link-default !important;
 }
 
 .vads-u-color--va-accent {
-  color: $color-va-accent;
+  color: $color-va-accent !important;
 }
 
 .vads-u-color--warning-message {
-  color: $color-warning-message;
+  color: $color-warning-message !important;
 }
 
 .vads-u-color--gibill-accent {
-  color: $color-gibill-accent;
+  color: $color-gibill-accent !important;
 }
 
 /*
   Primary
 */
 .vads-u-color--primary {
-  color: $color-primary;
+  color: $color-primary !important;
 }
 
 .vads-u-color--primary-darker {
-  color: $color-primary-darker;
+  color: $color-primary-darker !important;
 }
 
 .vads-u-color--primary-darkest {
-  color: $color-primary-darkest;
+  color: $color-primary-darkest !important;
 }
 
 /*
   Primary alt
 */
 .vads-u-color--primary-alt {
-  color: $color-primary-alt;
+  color: $color-primary-alt !important;
 }
 
 .vads-u-color--primary-alt-dark {
-  color: $color-primary-alt-dark;
+  color: $color-primary-alt-dark !important;
 }
 
 .vads-u-color--primary-alt-darkest {
-  color: $color-primary-alt-darkest;
+  color: $color-primary-alt-darkest !important;
 }
 
 .vads-u-color--primary-alt-light {
-  color: $color-primary-alt-light;
+  color: $color-primary-alt-light !important;
 }
 
 .vads-u-color--primary-alt-lightest {
-  color: $color-primary-alt-lightest;
+  color: $color-primary-alt-lightest !important;
 }
 
 /*
   Secondary
 */
 .vads-u-color--secondary {
-  color: $color-secondary;
+  color: $color-secondary !important;
 }
 
 .vads-u-color--secondary-dark {
-  color: $color-secondary-dark;
+  color: $color-secondary-dark !important;
 }
 
 .vads-u-color--secondary-darkest {
-  color: $color-secondary-darkest;
+  color: $color-secondary-darkest !important;
 }
 
 .vads-u-color--secondary-light {
-  color: $color-secondary-light;
+  color: $color-secondary-light !important;
 }
 
 .vads-u-color--secondary-lightest {
-  color: $color-secondary-lightest;
+  color: $color-secondary-lightest !important;
 }
 
 
@@ -98,66 +98,66 @@
 */
 
 .vads-u-color--gray {
-  color: $color-gray;
+  color: $color-gray !important;
 }
 
 .vads-u-color--gray-dark {
-  color: $color-gray-dark;
+  color: $color-gray-dark !important;
 }
 
 .vads-u-color--gray-medium {
-  color: $color-gray-medium;
+  color: $color-gray-medium !important;
 }
 
 .vads-u-color--gray-light {
-  color: $color-gray-light;
+  color: $color-gray-light !important;
 }
 
 .vads-u-color--gray-light-alt {
-  color: $color-gray-light-alt;
+  color: $color-gray-light-alt !important;
 }
 
 .vads-u-color--gray-lighter {
-  color: $color-gray-lighter;
+  color: $color-gray-lighter !important;
 }
 
 .vads-u-color--gray-lightest {
-  color: $color-gray-lightest;
+  color: $color-gray-lightest !important;
 }
 
 .vads-u-color--gray-warm-dark {
-  color: $color-gray-warm-dark;
+  color: $color-gray-warm-dark !important;
 }
 
 .vads-u-color--gray-warm-light {
-  color: $color-gray-warm-light;
+  color: $color-gray-warm-light !important;
 }
 
 .vads-u-color--gray-cool-light {
-  color: $color-gray-cool-light;
+  color: $color-gray-cool-light !important;
 }
 
 /*
   Gold
 */
 .vads-u-color--gold {
-  color: $color-gold;
+  color: $color-gold !important;
 }
 
 .vads-u-color--gold-darker {
-  color: $color-gold-darker;
+  color: $color-gold-darker !important;
 }
 
 .vads-u-color--gold-light {
-  color: $color-gold-light;
+  color: $color-gold-light !important;
 }
 
 .vads-u-color--gold-lighter {
-  color: $color-gold-lighter;
+  color: $color-gold-lighter !important;
 }
 
 .vads-u-color--gold-lightest {
-  color: $color-gold-lightest;
+  color: $color-gold-lightest !important;
 }
 
 
@@ -165,42 +165,42 @@
   Green
 */
 .vads-u-color--green {
-  color: $color-green;
+  color: $color-green !important;
 }
 
 .vads-u-color--green-darker {
-  color: $color-green-darker;
+  color: $color-green-darker !important;
 }
 
 .vads-u-color--green-light {
-  color: $color-green-light;
+  color: $color-green-light !important;
 }
 
 .vads-u-color--green-lighter {
-  color: $color-green-lighter;
+  color: $color-green-lighter !important;
 }
 
 .vads-u-color--green-lightest {
-  color: $color-green-lightest;
+  color: $color-green-lightest !important;
 }
 
 /*
   Cool blue
 */
 .vads-u-color--cool-blue {
-  color: $color-cool-blue;
+  color: $color-cool-blue !important;
 }
 
 .vads-u-color--cool-blue-light {
-  color: $color-cool-blue-light;
+  color: $color-cool-blue-light !important;
 }
 
 .vads-u-color--cool-blue-lighter {
-  color: $color-cool-blue-lighter;
+  color: $color-cool-blue-lighter !important;
 }
 
 .vads-u-color--cool-blue-lightest {
-  color: $color-cool-blue-lightest;
+  color: $color-cool-blue-lightest !important;
 }
 
 /*
@@ -208,37 +208,37 @@
 */
 
 .vads-u-color--hub-health-care {
-  color: $indigo-cool-60
+  color: $indigo-cool-60 !important;
 }
 
 .vads-u-color--hub-education {
-  color: $mint-cool-50
+  color: $mint-cool-50 !important;
 }
 
 .vads-u-color--hub-disability {
-  color: $red-60
+  color: $red-60 !important;
 }
 
 .vads-u-color--hub-careers {
-  color: $orange-warm-50
+  color: $orange-warm-50 !important;
 }
 
 .vads-u-color--hub-pension {
-  color: $green-cool-50
+  color: $green-cool-50 !important;
 }
 
 .vads-u-color--hub-housing {
-  color: $gold-50;
+  color: $gold-50 !important;
 }
 
 .vads-u-color--hub-life-insurance {
-  color: $green-warm-50;
+  color: $green-warm-50 !important;
 }
 
 .vads-u-color--hub-burials {
-  color: $blue-50;
+  color: $blue-50 !important;
 }
 
 .vads-u-color--hub-records {
-  color: $violet-warm-60;
+  color: $violet-warm-60 !important;
 }
