--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -63,6 +63,7 @@
 @import "utilities/color";
 @import "utilities/display";
 @import "utilities/flexbox";
+@import "utilities/font-family";
 @import "utilities/font-size";
 @import "utilities/margins";
 @import "utilities/padding";
