--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -123,6 +123,7 @@ $modal-layer: 400;
 */
 $multiple: 8px !default;
 
+// Map is used for margin and padding utilities.
 $spacers: (
   0:    0,
   1px:  1px,
@@ -140,6 +141,44 @@ $spacers: (
   8:    $multiple * 8,
   9:    $multiple * 9
 ) !default;
+
+// Map for spacing tokens in Rems
+$units:(
+  0:      0,
+  1px:    .1,
+  .25:    .2,
+  .5:     .4,
+  1:      .8,
+  1.5:    1.2,
+  2:      1.6,
+  2.5:    2,
+  3:      2.4,
+  4:      3.2,
+  5:      4,
+  6:      4.8,
+  7:      5.6,
+  8:      6.4,
+  9:      7.2,
+  10:     8,
+  15:     12,
+  -1px:    -.1,
+  -.25:    -.2,
+  -.5:     -.4,
+  -1:      -.8,
+  -1.5:    -1.2,
+  -2:      -1.6,
+  -2.5:    -2,
+  -3:      -2.4,
+  -4:      -3.2,
+  -5:      -4,
+  -6:      -4.8,
+  -7:      -5.6,
+  -8:      -6.4,
+  -9:      -7.2,
+  -10:     -8,
+  -15:     -12,
+);
+
 
 //====================================
 // Grid columns
