create text align utility

--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -67,4 +67,5 @@
 @import "utilities/font-size";
 @import "utilities/margins";
 @import "utilities/padding";
+@import "utilities/text-align";
 @import "utilities/visibility";
