add text decoration utility and update version

--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -68,4 +68,5 @@
 @import "utilities/margins";
 @import "utilities/padding";
 @import "utilities/text-align";
+@import "utilities/text-decoration";
 @import "utilities/visibility";
