--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -65,6 +65,7 @@
 @import "utilities/flexbox";
 @import "utilities/font-family";
 @import "utilities/font-size";
+@import "utilities/font-style";
 @import "utilities/margins";
 @import "utilities/padding";
 @import "utilities/text-align";
