create transparent background and text colors

--- a/packages/formation/sass/utilities/_background-color.scss
+++ b/packages/formation/sass/utilities/_background-color.scss
@@ -1,3 +1,7 @@
+.vads-u-background-color--transparent {
+  background-color: transparent !important;
+}
+
 .vads-u-background-color--base {
   background-color: $color-base !important;
 }
