--- a/packages/formation/sass/utilities/_color.scss
+++ b/packages/formation/sass/utilities/_color.scss
@@ -1,3 +1,7 @@
+.vads-u-color--transparent {
+  color: $color-transparent !important;
+}
+
 .vads-u-color--base {
   color: $color-base !important;
 }
