--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -66,6 +66,7 @@
 @import "utilities/font-family";
 @import "utilities/font-size";
 @import "utilities/font-style";
+@import "utilities/font-weight";
 @import "utilities/margins";
 @import "utilities/padding";
 @import "utilities/text-align";
