create border utility

--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -60,6 +60,7 @@
 
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
 @import "utilities/background-color";
+@import "utilities/border";
 @import "utilities/color";
 @import "utilities/display";
 @import "utilities/flexbox";
