--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -68,6 +68,7 @@
 @import "utilities/font-size";
 @import "utilities/font-style";
 @import "utilities/font-weight";
+@import "utilities/height-width";
 @import "utilities/margins";
 @import "utilities/padding";
 @import "utilities/text-align";
