Array list/15743 add focus behavior array (#255)
* update version

* add highlight to h5

* use class name to select array list item

--- a/packages/formation/sass/modules/_m-form-process.scss
+++ b/packages/formation/sass/modules/_m-form-process.scss
@@ -213,6 +213,11 @@
   margin-bottom: 0;
 }
 
+.schemaform-array-row-title:focus {
+  @include focus-gold-light-outline;
+  display: inline-block;
+}
+
 .form-review-array {
   margin-top: 5rem;
 }
