--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -69,6 +69,7 @@
 @import "utilities/font-weight";
 @import "utilities/height-width";
 @import "utilities/margins";
+@import "utilities/measure";
 @import "utilities/padding";
 @import "utilities/text-align";
 @import "utilities/text-decoration";
