--- a/packages/formation/sass/modules/_m-alert.scss
+++ b/packages/formation/sass/modules/_m-alert.scss
@@ -127,25 +127,7 @@
 }
 
 .va-alert-close {
-  font-family: "Font Awesome 5 Free";
-  background: transparent;
-  color: $color-base;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
-  width: auto;
-
-  &:hover {
-    background: transparent !important;
-    color: lighten($color-gray-dark, 30%);
-  }
-
-  .fa {
-    // Override fa font-size.
-    font-size: 1.45em !important;
-  }
+  @include close-button;
 }
 
 // on post-9/11 GI Bill
