--- a/packages/formation/sass/modules/_m-modal.scss
+++ b/packages/formation/sass/modules/_m-modal.scss
@@ -159,24 +159,5 @@
 }
 
 button.va-modal-close {
-  background-color: transparent;
-  color: $color-primary;
-  font-size: 2.25rem;
-  padding: 0;
-  position: absolute;
-  margin: 2rem;
-  right: 0;
-  top: 0;
-  width: auto;
-  z-index: 9;
-
-  &:hover {
-    background-color: transparent;
-    color: $color-primary-darker;
-  }
-
-  &:active {
-    background-color: transparent;
-    color: $color-primary-darkest;
-  }
+  @include close-button;
 }
