--- a/packages/documentation/src/scss/main.scss
+++ b/packages/documentation/src/scss/main.scss
@@ -38,12 +38,9 @@
     border-bottom: 1px solid rgba(0,0,0,0.07);
   }
 
-  h4 {
-    margin-left: 25px;
-  }
-
   .menu-list {
     list-style: none;
+    margin-left: 0;
 
     a {
       text-decoration: none;
