Converted to standardized spacing units.

--- a/packages/formation/sass/shared-variables.scss
+++ b/packages/formation/sass/shared-variables.scss
@@ -15,4 +15,5 @@ $image-path: "~uswds/src/img";
 @import "base/b-variables";
 @import "base/b-breakpoints";
 @import "base/b-mixins";
+@import "base/b-functions";
 @import "base/b-element-overrides";
