--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -156,7 +156,7 @@
   font-size: 2.25rem;
   padding: 0;
   position: absolute;
-  margin: 1.5rem;
+  margin: units(2);
   right: 0;
   top: 0;
   width: auto;
