--- a/packages/formation/sass/modules/_m-alert.scss
+++ b/packages/formation/sass/modules/_m-alert.scss
@@ -4,14 +4,14 @@
   border-left-style: solid;
   border-left-width: 10px;
   display: table;
-  padding: 3rem 6.5rem 3rem 2.5rem;
+  padding: units(4) units(8) units(4) units(3);
   width: 100%;
 
   &::before {
     background: none;
     font-family: "Font Awesome 5 Free";
     font-size: 2rem;
-    margin-right: 1.5rem;
+    margin-right: units(2);
     position: static;
     font-weight: 900;
   }
@@ -32,7 +32,7 @@
   }
 
   &-text {
-    margin-top: 2rem;
+    margin-top: units(2.5);
 
     &:only-child {
       margin: 0;
@@ -49,11 +49,11 @@
 
     // should override :first-child
     .usa-alert-heading + p:only-of-type {
-      margin-top: 2rem;
+      margin-top: units(2.5);
     }
 
     ul {
-      padding-left: 2rem;
+      padding-left: units(2.5);
     }
   }
 
