--- a/packages/formation/sass/modules/_m-modal.scss
+++ b/packages/formation/sass/modules/_m-modal.scss
@@ -29,7 +29,7 @@
 
   &-title {
     margin: 0;
-    margin-bottom: 1.5rem;
+    margin-bottom: units(2);
   }
 
   &-inner {
@@ -52,13 +52,13 @@
     max-width: 60rem;
 
     .alert-actions {
-      margin-top: 2.5rem;
+      margin-top: units(3);
 
       button {
         margin: 0;
 
         + button {
-          margin-left: 2rem;
+          margin-left: units(2.5);
         }
       }
     }
@@ -66,7 +66,7 @@
 
   &-body {
     overflow-wrap: break-word;
-    padding: 2rem;
+    padding: units(2.5);
     word-break: break-word;
     word-wrap: break-word;
   }
