--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -150,7 +150,7 @@
   }
 }
 
-@mixin close-button {
+@mixin modal-close-button {
   background-color: transparent;
   color: $color-primary;
   font-size: 2.25rem;
