New sidebar layout and stubbed information architecture (#11)

--- a/packages/documentation/src/scss/main.scss
+++ b/packages/documentation/src/scss/main.scss
@@ -38,16 +38,17 @@
     border-bottom: 1px solid rgba(0,0,0,0.07);
   }
 
-  h4 {
-    margin-left: 25px;
-  }
-
   .menu-list {
     list-style: none;
+    margin-left: 0;
 
     a {
       text-decoration: none;
     }
+  }
+
+  .home-link {
+    margin-left: 1.5em;
   }
 }
 
