--- a/packages/formation/sass/utilities/_color.scss
+++ b/packages/formation/sass/utilities/_color.scss
@@ -212,37 +212,45 @@
 */
 
 .vads-u-color--hub-health-care {
-  color: $indigo-cool-60 !important;
+  color: $color-hub-health-care !important;
 }
 
 .vads-u-color--hub-education {
-  color: $mint-cool-50 !important;
+  color: $color-hub-education !important;
 }
 
 .vads-u-color--hub-disability {
-  color: $red-60 !important;
+  color: $color-hub-disability !important;
 }
 
 .vads-u-color--hub-careers {
-  color: $orange-warm-50 !important;
+  color: $color-hub-careers !important;
 }
 
 .vads-u-color--hub-pension {
-  color: $green-cool-50 !important;
+  color: $color-hub-pension !important;
 }
 
 .vads-u-color--hub-housing {
-  color: $gold-50 !important;
+  color: $color-hub-housing !important;
 }
 
 .vads-u-color--hub-life-insurance {
-  color: $green-warm-50 !important;
+  color: $color-hub-life-insurance !important;
 }
 
 .vads-u-color--hub-burials {
-  color: $blue-50 !important;
+  color: $color-hub-burials !important;
 }
 
 .vads-u-color--hub-records {
-  color: $violet-warm-60 !important;
+  color: $color-hub-records !important;
+}
+
+.vads-u-color--hub-family-member {
+  color: $color-hub-family-member !important;
+}
+
+.vads-u-color--hub-service-member {
+  color: $color-hub-service-member !important;
 }
