--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -90,6 +90,19 @@ $green-warm-50: #6f7a41;
 $blue-50: #357ab2;
 $violet-warm-60: #864381;
 
+// Contextual variable names
+$color-hub-health-care: $indigo-cool-60;
+$color-hub-education: $mint-cool-50;
+$color-hub-disability: $red-60;
+$color-hub-careers: $orange-warm-50;
+$color-hub-pension: $green-cool-50;
+$color-hub-housing: $gold-50;
+$color-hub-life-insurance: $green-warm-50;
+$color-hub-burials: $blue-50;
+$color-hub-records: $violet-warm-60;
+$color-hub-family-member: $color-primary-darker;
+$color-hub-service-member: $color-primary-darker;
+
 //===================================
 // Deprecated Colors;
 // Please avoid using.
