bring CSS for external link into Formation css

--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -54,6 +54,9 @@
 @import "base/va";
 @import "base/focus";
 
+// ----- VA MODULES ---- //
+@import "modules/m-external-link";
+
 // ----- Layout ---- //
 @import "layout/flex-grid";
 
