--- a/packages/documentation/src/layouts/module-components.scss
+++ b/packages/documentation/src/layouts/module-components.scss
@@ -3,11 +3,15 @@ $image-path: "~uswds/src/img";
 
 @import "~@department-of-veterans-affairs/formation/sass/core";
 
+
+/*
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-additional-info";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-alert";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-breadcrumbs";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-button";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-dropdown";
+*/
+
 /*
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-form-elements";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-homepage-hero";
