remove css imports

--- a/packages/documentation/src/layouts/module-components.scss
+++ b/packages/documentation/src/layouts/module-components.scss
@@ -1,27 +1,19 @@
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
 
-@import "~@department-of-veterans-affairs/formation/sass/core";
+// @import "~@department-of-veterans-affairs/formation/sass/core";
 
-
-/*
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-additional-info";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-alert";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-breadcrumbs";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-button";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-dropdown";
-*/
-
-/*
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-form-elements";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-homepage-hero";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-hub-page-link-list";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-loading-indicator";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-megamenu";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-modal";
-*/
-
-/*
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-linkslist";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-next-previous";
 @import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-sidebar";
@@ -38,4 +30,3 @@ $image-path: "~uswds/src/img";
 @import "~@department-of-veterans-affairs/formation/sass/mobile-typography";
 
 @import "~@department-of-veterans-affairs/formation/sass/shame";
-*/
