--- a/packages/documentation/src/layouts/module-components.scss
+++ b/packages/documentation/src/layouts/module-components.scss
@@ -1,2 +1,19 @@
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
+
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-linkslist";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-next-previous";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-nav-sidebar";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-omb-info";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-overlay";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-print";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-process-list";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-progress-bar";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-search";
+@import "~@department-of-veterans-affairs/formation/sass/modules/m-table";
+@import "~@department-of-veterans-affairs/formation/sass/modules/va-pagination";
+@import "~@department-of-veterans-affairs/formation/sass/modules/va-tabs";
+
+@import "~@department-of-veterans-affairs/formation/sass/mobile-typography";
+
+@import "~@department-of-veterans-affairs/formation/sass/shame";
