remove css imports

--- a/packages/documentation/src/layouts/module-components.scss
+++ b/packages/documentation/src/layouts/module-components.scss
@@ -1,7 +1,7 @@
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
 
-// @import "~@department-of-veterans-affairs/formation/sass/core";
+@import "~@department-of-veterans-affairs/formation/sass/core";
 
 // @import "~@department-of-veterans-affairs/formation/sass/modules/m-additional-info";
 // @import "~@department-of-veterans-affairs/formation/sass/modules/m-alert";
