add heading levels to font size utilities

--- a/packages/formation/sass/utilities/_font-size.scss
+++ b/packages/formation/sass/utilities/_font-size.scss
@@ -4,7 +4,13 @@ $font-sizes: (
   md: 1.7rem,
   lg: 2rem,
   xl: 3rem,
-  2xl: 4rem
+  2xl: 4rem,
+  h1: 4rem,
+  h2: 3rem,
+  h3: 2rem,
+  h4: 1.7rem,
+  h5: 1.5rem,
+  h6: 1.5rem
 );
 
 // Standard classes
