--- a/packages/formation/sass/_shame.scss
+++ b/packages/formation/sass/_shame.scss
@@ -141,7 +141,7 @@ body {
 // Where else can I put this? Also, it could use a better name.
 .expander-button {
   &::after {
-    background-image: url("/img/arrow-down-white.svg");
+    background-image: url(../assets/img/arrow-down-white.svg);
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: 0.6em auto;
