--- a/packages/formation/sass/modules/_m-external-link.scss
+++ b/packages/formation/sass/modules/_m-external-link.scss
@@ -1,5 +1,5 @@
 .external-link-icon-black {
-  background-image: url(/img/icons/exit-icon.png);
+  background-image: url(../assets/img/icons/exit-icon.png);
   background-position: 100% 50%;
   background-repeat: no-repeat;
   background-size: 1em auto;
