--- a/packages/formation/sass/modules/_m-search.scss
+++ b/packages/formation/sass/modules/_m-search.scss
@@ -22,8 +22,8 @@ $usa-btn-big-width:     11.6rem;
   }
 
   [type="submit"] {
-    background-image: url(/img/search.png);
-    background-image: url(/img/search.svg);
+    background-image: url(../assets/img/search.png);
+    background-image: url(../assets/img/search.svg);
     background-position: 50%;
     background-repeat: no-repeat;
     border-bottom-left-radius: 0;
