--- a/packages/formation/sass/site/_m-crisis-line.scss
+++ b/packages/formation/sass/site/_m-crisis-line.scss
@@ -63,7 +63,7 @@
 }
 
 button.va-crisis-line-button {
-  background: $color-white url(/img/arrow-right.svg) calc(100% - 0.5em) center no-repeat;
+  background: $color-white url(../assets/img/arrow-right.svg) calc(100% - 0.5em) center no-repeat;
   background-size: .8em auto;
   border-radius: 0;
   color: $color-base;
