update source urls for bitter fonts

--- a/packages/formation/sass/site/_m-crisis-line.scss
+++ b/packages/formation/sass/site/_m-crisis-line.scss
@@ -89,7 +89,7 @@ button.va-crisis-line-button {
 
   .vcl {
     content: "";
-    background: url(/img/vcl-logo.png) no-repeat right 29%;
+    background: url(../assets/img/vcl-logo.png) no-repeat right 29%;
     background-size: 100%;
     display: inline-block;
     width: 2em;
