--- a/packages/formation/sass/site/_m-footer.scss
+++ b/packages/formation/sass/site/_m-footer.scss
@@ -94,7 +94,7 @@
 }
 
 .footer-seal {
-  background: url(/img/design/sprites/sprite.png) no-repeat 0 -23px;
+  background: url(../assets/img/design/sprites/sprite.png) no-repeat 0 -23px;
   background-size: 215px 72px;
   width: 215px;
   height: 49px;
