--- a/packages/formation/sass/site/_m-vet-nav.scss
+++ b/packages/formation/sass/site/_m-vet-nav.scss
@@ -307,7 +307,7 @@ body.va-pos-fixed {
 }
 
 #vetnav .back-button {
-  background: $color-primary-darker url(/img/arrow-left-white.svg) right 3rem
+  background: $color-primary-darker url(../assets/img/arrow-left-white.svg) right 3rem
     center no-repeat;
   background-position: left 1rem center;
   background-size: 1.4rem auto;
