--- a/packages/formation/sass/site/_m-vet-nav.scss
+++ b/packages/formation/sass/site/_m-vet-nav.scss
@@ -8,7 +8,7 @@ body.va-pos-fixed {
 }
 
 #vetnav,
-[role='menu'] [role='menu'] {
+[role="menu"] [role="menu"] {
   // The main menu takes up the whole screen under the Menu button for xsmall & small screens
   // Sub menus also take up the whole screen to cover the main menu
   min-height: calc(100vh - #{$height-offset-xsmall});
@@ -30,12 +30,12 @@ body.va-pos-fixed {
   // shouldn't affect anything. However, it's here to show how the height is offset by the
   // vertical positioning.
   // top: $height-offset;
+  left: -0.9rem;
   overflow-y: scroll;
   position: absolute;
-  width: 100%;
+  width: 103%;
 
   // Just large enough to take precedence over any other dropdowns on the page and the VA Map
-  z-index: 1011;
 
   &.vetnav--submenu-expanded {
     #vetnav-menu {
@@ -88,7 +88,7 @@ body.va-pos-fixed {
 
   &::before {
     display: block;
-    content: ' ';
+    content: " ";
   }
 
   ul {
@@ -155,7 +155,7 @@ body.va-pos-fixed {
   }
 }
 
-[class^='vetnav-controller'] {
+[class^="vetnav-controller"] {
   position: absolute;
   top: 0;
   left: 0;
@@ -207,7 +207,7 @@ body.va-pos-fixed {
     }
   }
 
-  &[aria-expanded='true'] {
+  &[aria-expanded="true"] {
     @include media($medium-large-screen) {
       color: $color-base;
       background-color: $color-white;
@@ -216,7 +216,7 @@ body.va-pos-fixed {
     }
   }
 
-  &[aria-expanded='false'] {
+  &[aria-expanded="false"] {
     background-image: url(/img/plus-white.svg);
 
     &:hover {
@@ -281,7 +281,7 @@ body.va-pos-fixed {
       text-decoration: underline;
     }
 
-    &[aria-expanded='true'] {
+    &[aria-expanded="true"] {
       background-color: $color-gray-lightest;
       border-bottom-color: $color-gray-warm-light;
       border-top-color: $color-gray-warm-light;
@@ -290,7 +290,6 @@ body.va-pos-fixed {
       font-weight: bold;
       text-decoration: inherit;
       position: relative;
-      z-index: 2;
     }
   }
 
@@ -357,7 +356,6 @@ body.va-pos-fixed {
     position: absolute;
     width: 100%;
     top: 0;
-    left: 30px;
     visibility: visible;
     margin: 0;
 
@@ -366,6 +364,7 @@ body.va-pos-fixed {
       background-color: $color-gray-lightest;
       height: 100%;
       margin-left: 23rem;
+      left: 30px;
       padding: 0.5rem 0 1.6rem;
       width: 31rem;
     }
@@ -400,14 +399,9 @@ body.va-pos-fixed {
     flex: 0 1 32.5rem;
     margin-left: 0;
     margin-right: 0;
-    z-index: 3;
   }
 
-  p {
-    margin: 0;
-  }
-
-  [href^='tel'] {
+  [href^="tel"] {
     text-decoration: none;
   }
 
@@ -417,8 +411,7 @@ body.va-pos-fixed {
     padding-left: 0;
   }
 
-  .va-dropdown,
-  .sign-in-link {
+  .va-dropdown {
     margin-left: 1rem;
   }
 
@@ -427,19 +420,15 @@ body.va-pos-fixed {
   }
 }
 
-.sign-in-link {
-  white-space: nowrap;
-}
-
-[id='search'] {
+[id="search"] {
   width: 30rem;
 
-  [type='text'] {
+  [type="text"] {
     margin: 0;
     flex: 1 0 20rem;
   }
 
-  [type='submit'] {
+  [type="submit"] {
     border-radius: 0 0.3rem 0.3rem 0;
     display: flex;
     flex: 1 0 3rem;
