--- a/packages/formation/sass/full.scss
+++ b/packages/formation/sass/full.scss
@@ -5,6 +5,9 @@
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
+$formation-asset-path: '../assets';
+$formation-image-path: "#{$formation-asset-path}/img" !default;
+$formation-font-path: "#{$formation-asset-path}/fonts" !default;
 @import "core";
 @import "modules/m-alert";
 @import "modules/m-breadcrumbs";
