fix webpack error handling; update urls to use scss variables

--- a/packages/formation/sass/modules/_m-homepage-hero.scss
+++ b/packages/formation/sass/modules/_m-homepage-hero.scss
@@ -4,7 +4,7 @@
 
 .homepage-hero-image {
   align-items: center;
-  background: $color-white url(../assets/img/design/background/veterans.jpg) center center no-repeat;
+  background: $color-white url('#{$formation-image-path}/design/background/veterans.jpg') center center no-repeat;
   background-size: cover;
   display: flex;
   margin: auto;
