Override on the USWDS focus variable

--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -88,7 +88,7 @@
 }
 
 @mixin focus-gold-light-outline($offset: 2) {
-  outline: 2px solid $color-gold-light;
+  outline: $focus-outline;
   outline-offset: #{$offset}px;
 }
 
