--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -87,6 +87,8 @@ $color-gold-light:           #f9c642;
 $color-visited:              $color-purple;
 $color-focus:                #3e94cf;
 
+$focus-outline:              2px solid $color-gold-light;
+
 //===================================
 // DSVA colors
 // Places where DSVA is going rogue!
