--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -42,6 +42,7 @@
 @import "~uswds/src/stylesheets/elements/table";
 @import "~uswds/src/stylesheets/elements/typography";
 @import "~uswds/src/stylesheets/components/accordions";
+@import "~uswds/src/stylesheets/components/alerts";
 @import "~uswds/src/stylesheets/components/forms";
 @import "~uswds/src/stylesheets/components/sidenav";
 @import "~uswds/src/stylesheets/components/media-block";
